--- a/package.json
+++ b/package.json
@@ -32,6 +32,6 @@
   },
   "dependencies": {
     "diff": "^4.0.1",
-    "discord.js": "git://github.com/discordjs/discord.js.git#master"
+    "discord.js": "github:discordjs/discord.js#master"
   }
 }
